sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value lgr
  lgr=getNombreValeurs()
  ^AlgBubbleSort1:5: error: not found: value lgr
  for(i<-0 to lgr-2) {
              ^