sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  lgr=getNombreValeurs()
  
  for(i<-0 to lgr-2) {
    if (plusPetit(i+1, i)) {
      echange(i+1, i)
      
    } 
  }
  
  
}